--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,12 @@
         android:layout_height="wrap_content"
         android:text="Show" />
 
+    <Button
+        android:id="@+id/updateBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update" />
+
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
