--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Update" />
+    <Button
+        android:id="@+id/deleteThoughtBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete Thought" />
 
     <TextView
         android:id="@+id/titleTextView"
